package com.nashss.se.currencypalservice.activity;

public class GetTransactionActivity {
}
