package com.nashss.se.currencypalservice.activity;

public class UpdateCurrencyActivity {
}
