package com.nashss.se.currencypalservice.dynamodb.DAO;

public class TransactionDAO {
}
