package com.nashss.se.currencypalservice.dynamodb.models;

public class Transaction {
}
