@startuml
Currency -- CurrencyAbrv
Transaction -- TransactionDAO
TransactionDAO -- CreateTransactionActivity
TransactionDAO -- UpdateTransactionActivity
TransactionDAO -- GetTransactionActivity
Currency -- CurrencyDAO
Transaction -- customerDAO
Customer -- customerDAO
customerDAO -- getCustomerActivity
customerDAO -- createCustomerActivity
customerDAO -- updateCustomerActivity
Transaction -- CurrencyDAO
CurrencyDAO -- getCurrencyActivity
CurrencyDAO -- updateCurrencyActivity
Currency -- CountryName
class Currency {
double currentRate
CurrencyAbrv currencyAbrv
CountryName countryName
int ranking
}
ENUM CountryName{

}

ENUM CurrencyAbrv {
USD, AUD, BGN
BRL
CAD
CHF
CNY
CZK
DKK
EUR
GBP
HKD
HRK
HUF
IDR
ILS
INR
ISK
JPY
KRW
MXN
MYR
NOK
NZD
}
class CurrencyDAO {
DynamoDBMapper mapper
MetricsPublisher metrics
getCurrency() : Currency
createCurrency() : Currency
updateCurrency() : Currency
}

class updateCurrencyActivity{
}
class getCurrencyActivity {
}
class TransactionDAO {
DynamoDBMapper mapper
MetricsPublisher metrics
getTransactionActivity() : Transaction
updateTransactionActivity() : Transaction
createTransactionActivity() : Transaction
}
class Transaction {
String transactionId
Currency currency
Customer customer
double amountToConvert
double amountConverted
double conversionRate
ZoneDateTime transactionDateTime
boolean isShown
}
class UpdateTransactionActivity {
}
class CreateTransactionActivity {
}
class GetTransactionActivity {
}

class customerDAO {
DynamoDBMapper mapper
MetricsPublisher metrics
getCustomerActivity() : Customer
updateCustomerActivity() : Customer
createCustomerActivity() : Customer
}

class Customer {
String customerId;
String name;
String dateOfBirth;
Map<Currency, double> balance
}
@enduml
